policies/capabilities-drop-all-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          has(ec.securityContext) &&
          has(ec.securityContext.capabilities) &&
          has(ec.securityContext.capabilities.drop) &&
          ec.securityContext.capabilities.drop.exists(d, d == "ALL")
        )
      message: >
        spec.ephemeralContainers[*].securityContext.capabilities.drop must exist and include "ALL".
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/capabilities-drop-all-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: capabilities-drop-all-ephemeralcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/capabilities-drop-all-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: capabilities-drop-all-ephemeralcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/capabilities-drop-all-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-capabilities-drop-all-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-capabilities-drop-all-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: capabilities-drop-all-ephemeralcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
